--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             data-self-class="b--btn-a--is-active">Another Trigger Element</a>
                         <div class="b--collapse-a" id="collapse-y">
                             <p class="test">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero obcaecati incidunt quod labore illum sint odit! Saepe eligendi laboriosam earum a molestias, totam praesentium vero! Provident ad iure facilis veniam.</p>
-                            <a href="http://wwww.google.com">vamos a google</a>
+                            <a href="http://www.google.com">vamos a google</a>
                         </div>
 
                         <a href="#" class="b--btn-a" 
@@ -76,7 +76,7 @@
                             data-self-class="b--btn-a--is-active">Another Trigger Element</a>
                         <div class="b--collapse-a" id="collapse-t">
                             <p class="test">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero obcaecati incidunt quod labore illum sint odit! Saepe eligendi laboriosam earum a molestias, totam praesentium vero! Provident ad iure facilis veniam.</p>
-                            <a href="http://wwww.google.com">vamos a google</a>
+                            <a href="http://www.google.com">vamos a google</a>
                         </div>
 
                     <hr>
@@ -89,6 +89,6 @@
     </section>
     <br><br><br><br><br><br><br>
 
-    <script src="./main.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
